trunk/Archive2/62/d174db2226d433/output
main.cpp: In function 'int main()':
main.cpp:15:23: error: invalid operands of types '<unresolved overloaded function type>' and 'const char [3]' to binary 'operator<<'
         std::count << "pk";
                       ^
